--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <footer>
             <div>
-            <section style="padding-top: 70px;">&copy; created by GonePerf<br>
+            <section>&copy; created by GonePerf<br>
                 <a href="" >+48 787 032 601</a>
                 <br><br>Zawadka Osiecka 44 
                 <br> 38-223 Osiek Jasielski
